<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.information.InformationFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/green_01" />

    <TextView
        android:id="@+id/text_ver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="12dp"
        android:text="@string/version_app"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/i_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_4"
        android:text="@string/version" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/green_01" />

    <TextView
        android:id="@+id/text_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="12dp"
        android:text="@string/about_app"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/i_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginEnd="@dimen/margin_16"
        android:text="@string/about_desc" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/green_01" />

</LinearLayout>