<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presentation.detail.DetailDiseaseActivity"
    tools:showIn="@layout/activity_detail_disease">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_15"
            android:text="@string/symptom_information"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/det_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/txt_solution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:layout_marginBottom="@dimen/margin_10"
            android:text="@string/solution"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/det_solution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>