<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presentation.detail.DetailDiseaseActivity"
    tools:showIn="@layout/activity_result_detection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:background="@drawable/background"
            android:id="@+id/result_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_v1"
            android:paddingRight="@dimen/margin_v1"
            android:textColor="@color/white"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_marginBottom="15dp"
            tools:text="Hispa"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/symptom_information"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/result_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/txt_solution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/solution"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/result_solution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>