<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeFragment">

    <TextView
        android:id="@+id/text_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_v1"
        android:layout_marginTop="@dimen/margin_v1"
        android:text="@string/steps"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="@dimen/margin_v1"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@id/text_steps">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_v1">

            <ImageButton
                android:id="@+id/view_click_button"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/margin_v1"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/margin_v1"
                android:background="@drawable/background"
                android:contentDescription="@string/click_button"
                android:src="@drawable/ic_outline_camera" />

            <TextView
                android:id="@+id/view_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_click_button"
                android:layout_marginStart="8dp"
                android:layout_marginTop="13dp"
                android:text="@string/click_button" />

            <ImageView
                android:id="@+id/view_arrow1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/margin_v4"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/margin_v4"
                android:layout_toEndOf="@id/view_click_button"
                android:contentDescription="@string/click_button"
                android:scaleType="fitXY"
                android:src="@drawable/ic_arrow_forward" />

            <ImageView
                android:id="@+id/view_take_picture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin_v1"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="@dimen/margin_v1"
                android:layout_toEndOf="@id/view_arrow1"
                android:contentDescription="@string/click_button"
                android:src="@drawable/ic_view_take_picture" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_take_picture"
                android:layout_marginTop="7dp"
                android:layout_toEndOf="@id/view_arrow1"
                android:text="@string/take_picture" />

            <ImageView
                android:id="@+id/view_arrow2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/margin_v4"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/margin_v4"
                android:layout_toEndOf="@id/view_take_picture"
                android:contentDescription="@string/click_button"
                android:scaleType="fitXY"
                android:src="@drawable/ic_arrow_forward" />

            <ImageView
                android:id="@+id/view_result"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin_v1"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="@dimen/margin_v1"
                android:layout_toEndOf="@id/view_arrow2"
                android:contentDescription="@string/click_button"
                android:src="@drawable/ic_view_result" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_result"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:layout_toEndOf="@id/view_arrow2"
                android:text="@string/see_result" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="15dp">

        <ImageView
            android:id="@+id/picture"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_takeimage" />

        <Button
            android:id="@+id/btn_take_picture"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="16dp"
            android:text="@string/take_picture"
            app:icon="@drawable/ic_outline_camera" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>